--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,16 @@
 {
   "manifest_version": 2,
-  "name": "Censor Bad Language",
-  "description": "Censor all bad language written on any webpage and mutes similar words on YouTube videos.",
-  "version": "0.2.0.1",
-  
+  "name": "Hate Speech Filter",
+  "description": "Filters all forms of hate speech written on any webpage and mutes similar words on YouTube videos.",
+  "version": "0.1.0.0",
+  "icons": {
+    "16": "icon16x16.jpg",
+    "48": "icon48x48.jpg",
+    "128": "icon128x128.jpg"
+  },
   "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "exclude_matches": ["https://www.churchofjesuschrist.org/*"],
         "js": ["censorWords.js"]
       },
       {
